<resources>
    <string name="app_name">EasyKt</string>
    <string name="test_net_data">测试加载网络数据</string>
    <string name="test_card_effects">测试卡片滑动效果</string>
    <string name="test_wave_effects">测试手指水波纹效果</string>
    <string name="test_card_pager">测试卡片滑动效果2</string>
    <string name="test_scroll">测试无限滑动的RecyclerView</string>
    <string name="test_permission">测试申请权限</string>
    <string name="test_request_permission">申请权限</string>
    <string name="test_request_camera">申请相机权限</string>
    <string name="test_request_notification">申请通知权限</string>
    <string name="test_open_target_page">打开指定页面</string>
    <string name="test_available_space">查询可用空间</string>
    <string name="test_flurry_analytics">Android Id</string>
    <string name="test_flurry_crash">Test Flurry Crash</string>
    <string name="test_nested_scrolling">Nested Scrolling</string>
    <string name="test_kotlin_flow">Test Kotlin Flow</string>
    <string name="test_bottom_sheet">Bottom Sheet Dialog</string>
    <string name="test_kotlin_channel">Test Kotlin Channel</string>
    <string name="test_material_snackbar">Snackbar</string>
    <string name="test_success">execute success</string>
    <string name="test_diff_util">RecyclerView DiffUtil</string>
    <string name="test_diff_util_button1">Change Item 1</string>
    <string name="test_diff_util_button2">Remove Item</string>
    <string name="test_kotlin_coroutines">Test Kotlin Coroutines</string>
    <string name="test_activity_result">registerForActivityResult</string>
    <string name="test_file">File Write/Read/Delete</string>
    <string name="test_notification">Send Notification</string>
    <string name="test_package_visibility">Package Visibility</string>
    <string name="test_jetpack_compose1">Jetpack Compose 1</string>
    <string name="test_jetpack_compose2">Jetpack Compose 2</string>
    <string name="test_jetpack_compose3">Compose Layout</string>
    <string name="test_window_insets">WindowInsetsAnimation</string>
    <string name="test_aes_encrypt">Aes Encrypt</string>
    <string name="test_bubble">Bubble</string>
    <string name="test_touch_scale_image">Touch Scale Image</string>
    <string name="test_round_rect">Round Corner Layout</string>
    <string name="test_motion_layout">Motion Layout</string>
    <string name="test_camerax">Camerax</string>
    <string name="test_side_slip">Side slip Layout</string>
    <string name="test_drawer">Drawer Layout</string>
    <string name="test_web">Web Page</string>
    <string name="test_camera_demo">Camera Demo</string>
    <string name="test_clock_view">Clock View</string>
    <string name="test_sector_view">Sector View</string>
    <string name="test_alarm">Alarm Manager</string>
    <string name="test_glide">Glide Demo</string>
    <string name="test_profiler">Profiler Demo</string>
    <string name="test_datastore">DataStore Demo</string>
    <string name="test_round_image">Round Image</string>
    <string name="test_media_picker">Media Picker</string>
    <string name="test_coil">Coil</string>
    <string name="test_rom_info">Rom Info</string>
    <string name="test_sliding_pane">SlidingPaneLayout</string>
    <string name="test_luban_compress">Luban Compress</string>
    <string name="test_fg_service">Foreground Service</string>
    <string name="test_kotlin_flow1">1. 异步计算的值流</string>
    <string name="test_kotlin_flow2">2. 冷流</string>
    <string name="test_kotlin_flow3">3. 取消流</string>
    <string name="test_kotlin_flow4">4. 流构建器：.asFlow() / flowOf() </string>
    <string name="test_kotlin_flow5">5. 过渡操作符：flow.map{} / flow.filter{} </string>
    <string name="test_kotlin_flow6">6. 转换操作符：flow.transform{} </string>
    <string name="test_kotlin_flow7">7. 限长操作符：flow.take() </string>
    <string name="test_kotlin_flow8">8. 末端操作符：.reduce / .fold / .first \n .single / .toList / .toSet </string>
    <string name="test_kotlin_flow9">9. 流是连续的</string>
    <string name="test_kotlin_flow10">10. 流的上下文 withContext</string>
    <string name="test_kotlin_flow11">11. flowOn 操作符</string>
    <string name="test_kotlin_flow12">12. 缓冲：flow.buffer()</string>
    <string name="test_kotlin_flow13">13. 合并：flow.conflate()</string>
    <string name="test_kotlin_flow14">14. 处理最新值：flow.collectLatest{}</string>
    <string name="test_kotlin_flow15">15. 组合多个流：flowA.zip(flowB) /\n flowA.combine(flowB)</string>
    <string name="test_kotlin_flow16">16. 展平流：flatMapConcat / \nflatMapMerge / flatMapLatest</string>
    <string name="test_kotlin_flow17">17. 流异常：收集器 try 与 catch</string>
    <string name="test_kotlin_flow18">18. 异常透明性：透明捕获 / 声明式捕获</string>
    <string name="test_kotlin_flow19">19. 流完成：命令式 / 声明式 / 启动流</string>
    <string name="test_kotlin_flow20">20. 流取消检测（会崩溃）</string>
    <string name="test_kotlin_flow21">21. 切换调度器：channelFlow</string>
    <string name="test_kotlin_channel1">1. 通道基础</string>
    <string name="test_kotlin_channel2">2. 关闭与迭代通道</string>
    <string name="test_kotlin_channel3">3. 构建通道生产者</string>
    <string name="test_kotlin_channel4">4. 管道</string>
    <string name="test_kotlin_channel5">5. 使用管道的素数</string>
    <string name="test_kotlin_channel6">6. 扇出</string>
    <string name="test_kotlin_channel7">7. 扇入</string>
    <string name="test_kotlin_channel8">8. 带缓冲的通道</string>
    <string name="test_kotlin_channel9">9. 通道是公平的</string>
    <string name="test_kotlin_channel10">10. 计时器通道</string>
    <string name="test_kotlin_channel11">11. 广播通道</string>
    <string name="test_kotlin_channel12">12. 复用多个 Channel</string>
    <string name="test_select_photo">select photo</string>
    <string name="test_select_crop_photo">select and crop photo</string>
    <string name="test_take_photo">take photo</string>
    <string name="test_take_crop_photo">take and crop photo</string>
    <string name="test_clear_photo">clear photo</string>
    <string name="test_select_video">select video</string>
    <string name="test_select_photo_video">select photo and video</string>
    <string name="test_clear">clear</string>
    <string name="test_write_file1">写入文件 openFileOutput</string>
    <string name="test_read_file1">读取文件 openFileInput</string>
    <string name="test_delete_file">删除文件 deleteFile</string>
    <string name="test_write_file2">写入文件 FileOutputStream</string>
    <string name="test_read_file2">读取文件 FileInputStream</string>
    <string-array name="coroutines_string_array">
        <item>1. 基础：非阻塞式挂起</item>
        <item>2. 基础：协程 Job.Join()</item>
        <item>3. 基础：结构化的并发</item>
        <item>4. 基础：作用域构建器</item>
        <item>5. 基础：全局协程像守护线程</item>
        <item>6. 取消协程的执行</item>
        <item>7. 取消是协作的</item>
        <item>8. 使计算代码可取消</item>
        <item>9. 在 finally 中释放资源</item>
        <item>10. 运行不能取消的代码块</item>
        <item>11&#8211;1. 超时会崩溃</item>
        <item>11&#8211;2. 超时不崩溃</item>
        <item>12. 异步超时与释放资源</item>
        <item>13. 默认顺序调用</item>
        <item>14. 使用 async 并发调用</item>
        <item>15. 惰性启动的 async</item>
        <item>16. 使用 async 的结构化并发</item>
        <item>17. 取消始终通过协程的层次结构来进行传递</item>
        <item>18. 调度器与线程</item>
        <item>19. 非受限调度器</item>
        <item>20. debug log</item>
        <item>21. 命名协程以用于调试</item>
        <item>22. 协程作用域</item>
        <item>23. Continuation</item>
        <item>24. Select 复用多个await</item>
        <item>25. 协程并发访问</item>
        <item>26. 轻量级锁: Mutex</item>
        <item>27. 轻量级信号量: Semaphore</item>
    </string-array>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="title_activity_compose_demo">ComposeDemoActivity</string>
    <string name="show_less">show less</string>
    <string name="show_more">show more</string>
    <string name="edittext_input_hint">Type a message…</string>
    <string name="prompt_plaintext">Message</string>
    <string name="hint_plaintext">The secrecy and integrity of this message will be guaranteed.</string>
    <string name="prompt_associated_data">Associated data</string>
    <string name="hint_associated_data">Only the integrity of this associated data will be guaranteed. For successful decryption it must be the same as the associated data used during encryption.</string>
    <string name="prompt_ciphertext">Ciphertext</string>
    <string name="hint_ciphertext">The ciphertext is in Base64 encoding. Try to modify it and verify that the decryption will fail.</string>
    <string name="action_encrypt">Encrypt</string>
    <string name="action_decrypt">Decrypt</string>
    <string name="error_cannot_encrypt">Cannot encrypt</string>
    <string name="error_cannot_decrypt">Cannot decrypt</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_bubble_page">This is bubble page</string>
    <string name="channel_new_messages">New messages</string>
    <string name="channel_new_messages_description">All new incoming messages.</string>
    <string name="rc_top_left_text">设置左上角圆角</string>
    <string name="rc_top_right_text">设置右上角圆角</string>
    <string name="rc_bottom_left_text">设置左下角圆角</string>
    <string name="rc_bottom_right_text">设置右下角圆角</string>
    <string name="rc_none_text">全直角</string>
    <string name="rc_all_text">全圆角</string>
    <string name="rc_top_all_text">上全圆角</string>
    <string name="rc_bottom_all_text">下全圆角</string>
    <string name="rc_left_all_text">左全圆角</string>
    <string name="rc_right_all_text">右全圆角</string>
    <string name="circle_layout">圆形布局</string>
    <string name="rc_dynamic_setting">动态设置圆角</string>
    <string name="take_photo">拍照</string>
    <string name="start_capture">录像</string>
    <string name="stop_capture">停止录像</string>
    <string name="slide_side1">side 1</string>
    <string name="slide_side2">side 2</string>
    <string name="slide_side3">side 3</string>
    <string name="slide_content">Content View</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="camera2d_translate">Translate</string>
    <string name="camera2d_rotate">Rotate</string>
    <string name="camera3d_reverse">Reverse</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_camera2d">Camera 2D</string>
    <string name="title_camera3d">Camera 3D</string>
    <string name="title_camera3d_steady">Steady</string>
    <string name="action_start">Start</string>
    <string name="title_volume">Volume</string>
    <string name="action_volume_up">Volume +</string>
    <string name="action_volume_down">Volume -</string>
    <string name="alarm1">set1()</string>
    <string name="alarm2">set2()</string>
    <string name="alarm3">setAlarmClock()</string>
    <string name="alarm_exact1">setExact1()</string>
    <string name="alarm_exact2">setExact2()</string>
    <string name="alarm_exact3">setExact3()</string>
    <string name="alarm_notice">时间到。。。</string>
    <string name="alarm_cancel">Cancel Alarm</string>
    <string name="profiler_record">Start Record</string>
    <string name="datastore_save_preferences">Save Random Preferences Data</string>
    <string name="datastore_save_proto">Save Proto Data</string>
    <string name="compress">Compress</string>
    <string name="open_chrome_intent1">Open-1</string>
    <string name="open_chrome_intent2">Open-2</string>
</resources>