<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright WeiLianYang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/btn_setAlarm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm1"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_setAlarm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm2"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setAlarm1" />

    <Button
        android:id="@+id/btn_setExactAlarm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm_exact1"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setAlarm2" />

    <Button
        android:id="@+id/btn_setExactAlarm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm_exact2"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setExactAlarm1" />

    <Button
        android:id="@+id/btn_setExactAlarm3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm_exact3"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setExactAlarm2" />

    <Button
        android:id="@+id/btn_setAlarmClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm3"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setExactAlarm3" />

    <Button
        android:id="@+id/btn_cancelAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="3dp"
        android:text="@string/alarm_cancel"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/btn_setAlarmClock" />

</androidx.constraintlayout.widget.ConstraintLayout>